frontend/test/should_fail/computations_no_proc2b.grg
test bar()
{
	optional {
		yield {
			add(Node);
		}
	}
}
